# nanobot

./: .gitignore  DESKTOP_E2E_CHECKLIST.md  DESKTOP_RELEASE.md  DESKTOP_RUNBOOK.md  DESKTOP_TODO.md  README.md  config.example.json  start_nanobot_gateway.cmd  start_nanobot_gateway.vbs
desktop-app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json
desktop-app/src/: app.tsx  main.tsx  styles.css  types.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: main.rs
desktop-app/src/components/: app-shell.tsx
desktop-app/src/context/: desktop-context.tsx
desktop-app/src/hooks/: use-desktop.ts
desktop-app/src/lib/: desktop-client.ts
desktop-app/src/pages/: chat-page.tsx  integrations-page.tsx  logs-page.tsx  sessions-page.tsx  settings-page.tsx  tasks-page.tsx
nanobot/agent/: loop.py
nanobot/agent/tools/: shell.py
nanobot/antigravity/: __init__.py  service.py
nanobot/channels/: base.py  desktop.py  feishu.py  manager.py
nanobot/cli/: commands.py
nanobot/codex/: __init__.py  service.py
nanobot/config/: schema.py
nanobot/cron/: service.py
nanobot/desktop/: protocol.py  runtime.py  server.py
nanobot/utils/: protobuf_raw_decode.py
scripts/: build_backend_sidecar.ps1  build_desktop_app.ps1  desktop_sidecar_entry.py  register_desktop_startup.ps1  unregister_desktop_startup.ps1
