[package]
name = "nanobot-desktop"
version = "0.1.0"
description = "Nanobot Windows Desktop"
authors = ["nanobot contributors"]
license = "MIT"
repository = "https://github.com/HKUDS/nanobot"
edition = "2021"
rust-version = "1.93.0"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
dirs = "5.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
